Altered secondary font color to ensure WCAG contrast compliance

--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
   --main-bg-color: #f9f6f6;
   --secondary-bg-color: #495057;
   --main-font-color: #495057;
-  --secondary-font-color: #ee6c4d;
+  --secondary-font-color: #9C290D;
 }
 
 * {
